--- a/generate_features/initial_orbital_elements.ipynb
+++ b/generate_features/initial_orbital_elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "14999  0014999.bin"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -101,8 +101,8 @@
     "        stable = 1 if np.isclose(simf.t, 1.e9) else 0\n",
     "        instability_time = simf.t\n",
     "        Rel_Eerr = abs((simf.calculate_energy()-sim.calculate_energy())/sim.calculate_energy())\n",
-    "        RHill12 = ((ps[1].m + ps[2].m)/(3.*ps[0].m))**(1./3.)\n",
-    "        RHill23 = ((ps[2].m + ps[3].m)/(3.*ps[0].m))**(1./3.)\n",
+    "        RHill12 = ps[1].a*((ps[1].m + ps[2].m)/(3.*ps[0].m))**(1./3.)\n",
+    "        RHill23 = ps[2].a*((ps[2].m + ps[3].m)/(3.*ps[0].m))**(1./3.)\n",
     "        beta12 = (ps[2].a - ps[1].a)/RHill12\n",
     "        beta23 = (ps[3].a - ps[2].a)/RHill23\n",
     "        features = [stable,instability_time,Rel_Eerr,RHill12,RHill23,beta12,beta23]\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -130,20 +130,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15 s, sys: 513 ms, total: 15.5 s\n",
-      "Wall time: 15.6 s\n"
+      "CPU times: user 15.7 s, sys: 359 ms, total: 16.1 s\n",
+      "Wall time: 16.5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "df = pd.concat([df, df.apply(get_initial_orbital_elements, axis=1)], axis=1)\n"
+    "df = pd.concat([df, df.apply(get_initial_orbital_elements, axis=1)], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df.drop([11003])\n",
@@ -152,8 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.to_csv('../csvs/initial_orbital_elements.csv', encoding='ascii')"
