first set of short integration features

--- a/generate_features/GenerateFeatures.ipynb
+++ b/generate_features/GenerateFeatures.ipynb
@@ -224,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "simIDmax = 15000\n",
@@ -445,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +639,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
