--- a/generate_features/initial_orbital_elements.ipynb
+++ b/generate_features/initial_orbital_elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "14999  0014999.bin"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,6 +70,24 @@
     "simIDmax = 15000\n",
     "df = df.head(simIDmax)\n",
     "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/raid-cita/dtamayo/stability/lib/python3.4/site-packages/rebound/simulation.py:374: RuntimeWarning: You have to reset function pointers after creating a reb_simulation struct with a binary file.\n",
+      "  warnings.warn(message, RuntimeWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim = rebound.Simulation.from_file(icpath+df.loc[11002].runstring)"
    ]
   },
   {
