How to save and load XGB model

--- a/Analysis/PDP_2DProjection.ipynb
+++ b/Analysis/PDP_2DProjection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -499,14 +499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation time: 57.852796\n"
+      "Evaluation time: 25.198168\n"
      ]
     }
    ],
@@ -523,7 +523,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -541,14 +555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total prediction time: 1.306737 s\n"
+      "Total prediction time: 1.129409 s\n"
      ]
     }
    ],
@@ -556,7 +570,7 @@
     "#mean_preds = np.zeros(param1.shape[0])\n",
     "preds = np.zeros(NumSamples)\n",
     "start = time.time()\n",
-    "preds = model1.predict_proba(planets_data)[:,1] #stable probability\n",
+    "preds = loaded_m.predict_proba(planets_data)[:,1] #stable probability\n",
     "end = time.time()\n",
     "print(\"Total prediction time: %f s\" % (end - start)) "
    ]
@@ -2597,6 +2611,47 @@
    ],
    "source": [
     "TwoDim_PDP(df_X, df_Y, model, 'e1', 'e3') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "154615\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bound method XGBClassifier.get_params of XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,\n",
+       "       gamma=0, learning_rate=1, max_delta_step=0, max_depth=3,\n",
+       "       min_child_weight=1, missing=nan, n_estimators=225, nthread=-1,\n",
+       "       objective='binary:logistic', reg_alpha=0, reg_lambda=1,\n",
+       "       scale_pos_weight=1, seed=0, silent=True, subsample=1)>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(model1 ,open(\"OptimalXGBmodel.pkl\", 'wb'))\n",
+    "loaded_m = pickle.load(open('OptimalXGBmodel.pkl', 'rb'))\n",
+    "\n",
+    "#model1.s\n",
+    "import os\n",
+    "statinfo = os.stat('OptimalXGBmodel.pkl')\n",
+    "print statinfo.st_size\n",
+    "#load it again\n",
+    "\n",
+    "loaded_m.get_params"
    ]
   },
   {
