--- a/Analysis/MCMC.ipynb
+++ b/Analysis/MCMC.ipynb
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1561,14 +1561,34 @@
       " [ 14.52134551  12.64848558]\n",
       " [ 17.12029131  14.10735675]\n",
       " [ 12.82350992  13.41797624]\n",
-      " [  6.0070941    5.84109357]]\n"
+      " [  6.0070941    5.84109357]\n",
+      " [  5.4643068    5.66080748]\n",
+      " [ 10.42662927  10.64421445]\n",
+      " [  7.03534277   7.05443009]\n",
+      " [ 15.84118369  14.50130017]\n",
+      " [ 10.1928292   10.86626396]\n",
+      " [ 17.30244996  16.2083509 ]\n",
+      " [ 12.58410356  12.05176564]\n",
+      " [  5.25955266   5.82096734]\n",
+      " [ 10.93068261   9.28575602]\n",
+      " [ 10.31818889  10.19167611]\n",
+      " [  6.00248789   6.52082273]\n",
+      " [ 14.65229117  11.22075155]\n",
+      " [ 19.25686354  18.68134151]\n",
+      " [ 14.1694859   15.2012337 ]\n",
+      " [  5.95437349   6.37302234]\n",
+      " [ 13.21286572  13.49648415]\n",
+      " [  8.58033104   5.8594505 ]\n",
+      " [ 15.51355701  15.32431123]\n",
+      " [ 10.95319307  10.85673395]\n",
+      " [  9.36094539   8.96362353]]\n"
      ]
     }
    ],
    "source": [
     "log_times = np.log(plt_d_vals)\n",
     "print log_times.shape\n",
-    "print log_times[:10,:]"
+    "print log_times[:30,:]"
    ]
   },
   {
@@ -1739,7 +1759,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This was done with the log likelyhood, now try taking log time, and then calculating the log likelyhood from that"
+    "This was done with the log likelihood, now try taking log time, and then calculating the log likelihood from that"
    ]
   },
   {
