--- a/Analysis/McMc2.ipynb
+++ b/Analysis/McMc2.ipynb
@@ -1925,6 +1925,7 @@
     "    \n",
     "    probs = fit_sigma( np.log(data[[\"t_shadow\", \"t\"]].as_matrix()), sigma_range= sigma_shape)\n",
     "    summed_prob = sigma_prob_sum(probs)\n",
+    "    pos = np.max(summed_prob)\n",
     "    ax.scatter(sigma_shape, summed_prob, label = str(i) )\n",
     "        \n",
     "plt.legend()\n",
