--- a/generate_features/initial_orbital_elements.ipynb
+++ b/generate_features/initial_orbital_elements.ipynb
@@ -18,24 +18,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>17995</th>\n",
-       "      <td>0017995.bin</td>\n",
+       "      <th>24995</th>\n",
+       "      <td>0024995.bin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17996</th>\n",
-       "      <td>0017996.bin</td>\n",
+       "      <th>24996</th>\n",
+       "      <td>0024996.bin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17997</th>\n",
-       "      <td>0017997.bin</td>\n",
+       "      <th>24997</th>\n",
+       "      <td>0024997.bin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17998</th>\n",
-       "      <td>0017998.bin</td>\n",
+       "      <th>24998</th>\n",
+       "      <td>0024998.bin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17999</th>\n",
-       "      <td>0017999.bin</td>\n",
+       "      <th>24999</th>\n",
+       "      <td>0024999.bin</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -43,11 +43,11 @@
       ],
       "text/plain": [
        "         runstring\n",
-       "17995  0017995.bin\n",
-       "17996  0017996.bin\n",
-       "17997  0017997.bin\n",
-       "17998  0017998.bin\n",
-       "17999  0017999.bin"
+       "24995  0024995.bin\n",
+       "24996  0024996.bin\n",
+       "24997  0024997.bin\n",
+       "24998  0024998.bin\n",
+       "24999  0024999.bin"
       ]
      },
      "execution_count": 1,
@@ -74,25 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/raid-cita/dtamayo/stability/lib/python3.4/site-packages/rebound/simulation.py:374: RuntimeWarning: You have to reset function pointers after creating a reb_simulation struct with a binary file.\n",
-      "  warnings.warn(message, RuntimeWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "sim = rebound.Simulation.from_file(icpath+df.loc[11002].runstring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -133,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/raid-cita/dtamayo/stability/lib/python3.4/site-packages/rebound/simulation.py:374: RuntimeWarning: You have to reset function pointers after creating a reb_simulation struct with a binary file.\n",
+      "/mnt/raid-cita/dtamayo/stability2/lib/python2.7/site-packages/rebound/simulation.py:374: RuntimeWarning: You have to reset function pointers after creating a reb_simulation struct with a binary file.\n",
       "  warnings.warn(message, RuntimeWarning)\n"
      ]
     },
@@ -148,8 +130,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.7 s, sys: 359 ms, total: 16.1 s\n",
-      "Wall time: 16.5 s\n"
+      "CPU times: user 25.1 s, sys: 1.02 s, total: 26.1 s\n",
+      "Wall time: 26.8 s\n"
      ]
     }
    ],
@@ -160,19 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = df.drop([11003])\n",
     "df['Stable'] = df['Stable'].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
