added new versions handling multiple boosters

--- a/Analysis/Old_Tuning_Notebooks/ParseModel.ipynb
+++ b/Analysis/Old_Tuning_Notebooks/ParseModel.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -319,24 +319,24 @@
     }
    ],
    "source": [
-    "feat_names = bst.feature_names\n",
     "#change encoding, should not be necessary\n",
-    "feat_names = [ name.encode(\"utf-8\") for name in feat_names]\n",
-    "print(feat_names)"
+    "print(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def tree_to_code(file_name, save_script):\n",
+    "def tree_to_code(file_name, feat_names, save_script, num):\n",
     "    #saved script is a file object, not a file path\n",
     "\n",
-    "    save_script.write(\"\\n    #New booster\")\n",
+    "    save_script.write(\"\\n    def tree{}(vals):\".format(num))\n",
+    "    saved_code.write(\"\\n        \" +\", \".join(feat_names) + \" = vals\")\n",
+    "\n",
     "    def recurse(node, depth):\n",
     "        \n",
     "        #each node is a line in the document\n",
@@ -368,45 +368,37 @@
     "            #print \"{}return {}\".format(indent, val)\n",
     "            save_script.write(\"\\n{}return {}\".format(indent, val))\n",
     "    #start at head of tree, depth of 1, since you need to indent after def... \n",
-    "    recurse(file_name[0], 1)\n",
+    "    recurse(file_name[0], 2)\n",
     "    return save_script"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "def tree(vals):\n",
-      "\n",
-      "    avg_iH1, avg_iH2, norm_std_a1, norm_max_a1, norm_std_window10_a1, norm_max_window10_a1, norm_std_a2, norm_max_a2, norm_std_window10_a2, norm_max_window10_a2, norm_std_a3, norm_max_a3, norm_std_window10_a3, norm_max_window10_a3, avg_ecross1, std_ecross1, max_ecross1, min_ecross1, avg_ecross2, std_ecross2, max_ecross2, min_ecross2, avg_ecross3, std_ecross3, max_ecross3, min_ecross3, norm_a1_slope, norm_a2_slope, norm_a3_slope, avg_beta12, std_beta12, min_beta12, max_beta12, avg_beta23, std_beta23, min_beta23, max_beta23 = vals\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "saved_code = open('coded_xgb_model_test.py','w+') \n",
     "\n",
-    "saved_code.write(\"def tree(vals):\")\n",
-    "print(\"\\ndef tree(vals):\")\n",
-    "print(\"\\n    \" +\", \".join(feat_names) + \" = vals\")\n",
-    "saved_code.write(\"\\n    \" +\", \".join(feat_names) + \" = vals\")\n",
-    "for booster_tree in booster_list:\n",
-    "    saved_code = tree_to_code(booster_tree, saved_code)\n",
-    "    #break\n",
+    "#print(\"\\ndef tree(vals):\")\n",
+    "#print(\"\\n    \" +\", \".join(feat_names) + \" = vals\")\n",
+    "saved_code.write(\"import numpy as np\")\n",
+    "saved_code.write(\"\\ndef avg_booster_models(vals):\")\n",
+    "saved_code.write(\"\\n    values = np.zeros({})\".format(len(booster_list)))\n",
+    "for i, booster_tree in enumerate(booster_list):\n",
+    "    saved_code = tree_to_code(booster_tree, features, saved_code, i)\n",
+    "    saved_code.write(\"\\n    values[{0}] = tree{0}(vals)\".format(i))\n",
+    "saved_code.write(\"\\n    avg_val = np.sum(values)\")\n",
+    "saved_code.write(\"\\n    return avg_val, values\")\n",
     "saved_code.close()\n",
     "#check line 346"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -426,24 +418,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.170113 0.45757401248719803\n",
-      "-0.170113 0.45757401248719803\n",
-      "-0.170113 0.45757401248719803\n",
-      "0.0266125 0.5066527323685994\n",
-      "-0.0107403 0.4973149508108906\n",
-      "0.123982 0.5309558568985782\n",
-      "0.313819 0.5778171609501437\n",
-      "-0.0107403 0.4973149508108906\n",
-      "0.0720043 0.5179933016368847\n",
-      "-0.14058 0.46491276595558145\n"
+      "(0.9078727456457608, 0.4134236947476724)\n"
      ]
     }
    ],
    "source": [
     "#print(X.loc[1].values)\n",
-    "for i in range(10):\n",
-    "    val = coded_xgb_model_test.tree(X.loc[i].values)\n",
-    "    print val, 1./(1.+np.exp(-1*val))"
+    "max_val = 0\n",
+    "min_val = 1\n",
+    "for i in range(21099):\n",
+    "    val = coded_xgb_model_test.avg_booster_models(X.loc[i].values)\n",
+    "    #print val, 1./(1.+np.exp(-1*val))\n",
+    "    #these are binary logistic scores, not probabilies\n",
+    "    score = np.exp((val[0] + 0.5))/(1. + np.exp(val[0] + 0.5))\n",
+    "    max_val = max(max_val, score)\n",
+    "    min_val = min(min_val, score)\n",
+    "    #print(val[0])\n",
+    "print(max_val, min_val)"
    ]
   },
   {
