--- a/Analysis/Old_Tuning_Notebooks/ParseModel.ipynb
+++ b/Analysis/Old_Tuning_Notebooks/ParseModel.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +418,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.9078727456457608, 0.4134236947476724)\n"
+      "(0.3308147, array([-0.170113 ,  0.0338133,  0.0869398, -0.0226714,  0.224358 ,\n",
+      "       -0.156022 , -0.139861 ,  0.216012 ,  0.136377 ,  0.121982 ]))\n",
+      "(0.6136694, array([-0.170113 ,  0.0338133,  0.0857531,  0.26137  ,  0.224358 ,\n",
+      "       -0.156022 , -0.139861 ,  0.216012 ,  0.136377 ,  0.121982 ]))\n",
+      "(0.5121697, array([-0.170113 ,  0.209864 , -0.177662 ,  0.208937 ,  0.169478 ,\n",
+      "        0.238509 , -0.139861 , -0.0734764,  0.187557 ,  0.0589371]))\n",
+      "(0.24215239999999996, array([ 0.0266125,  0.0338133,  0.278104 ,  0.0946914, -0.315051 ,\n",
+      "       -0.25299  ,  0.229437 ,  0.216477 , -0.0554273, -0.0135145]))\n",
+      "(0.7884689, array([-0.0107403, -0.104382 , -0.177662 ,  0.221611 ,  0.133931 ,\n",
+      "        0.238509 ,  0.15315  ,  0.149265 ,  0.208326 , -0.0235388]))\n",
+      "(0.9286403, array([ 0.123982 ,  0.0338133,  0.290249 ,  0.26137  ,  0.224358 ,\n",
+      "       -0.156022 ,  0.229437 ,  0.120642 , -0.321171 ,  0.121982 ]))\n",
+      "(1.1182251, array([ 0.313819 , -0.104382 , -0.0305391,  0.266804 ,  0.133931 ,\n",
+      "        0.238509 ,  0.15315  ,  0.10815  , -0.0201539,  0.0589371]))\n",
+      "(0.5301828, array([-0.0107403, -0.104382 , -0.177662 , -0.238552 ,  0.133931 ,\n",
+      "        0.238509 ,  0.219932 ,  0.201884 ,  0.208326 ,  0.0589371]))\n",
+      "(0.1883963, array([ 0.0720043,  0.118874 , -0.177662 , -0.0252674,  0.169478 ,\n",
+      "       -0.252116 , -0.139861 ,  0.216012 ,  0.187557 ,  0.0193774]))\n"
      ]
     }
    ],
@@ -426,15 +443,9 @@
     "#print(X.loc[1].values)\n",
     "max_val = 0\n",
     "min_val = 1\n",
-    "for i in range(21099):\n",
+    "for i in range(9):\n",
     "    val = coded_xgb_model_test.avg_booster_models(X.loc[i].values)\n",
-    "    #print val, 1./(1.+np.exp(-1*val))\n",
-    "    #these are binary logistic scores, not probabilies\n",
-    "    score = np.exp((val[0] + 0.5))/(1. + np.exp(val[0] + 0.5))\n",
-    "    max_val = max(max_val, score)\n",
-    "    min_val = min(min_val, score)\n",
-    "    #print(val[0])\n",
-    "print(max_val, min_val)"
+    "    print(val[0], val[1])"
    ]
   },
   {
