--- a/Analysis/newmodels/resfeaturesmodel.ipynb
+++ b/Analysis/newmodels/resfeaturesmodel.ipynb
@@ -49,7 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Skip this section. This is to format and join the new dataset with the old one. You can just load the final csv below. Use this to regenerate if you want and have access to the files on CITA"
+    "# Skip this section. This is to format and join the new dataset with the old one. You can just load the final csv below. Use this to regenerate if you want and have access to the files on CITA\n",
+    "\n",
+    "newstabilitydataset = stabilitydatasetresonant"
    ]
   },
   {
@@ -3260,21 +3262,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
