new resonant features

--- a/generate_training_data/test_notebooks/reproducibility.ipynb
+++ b/generate_training_data/test_notebooks/reproducibility.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- For resonant and Ari TTV systems use REBOUND commit 25f856dc2f79e0ad17b2f6bd604225f550593376\n",
+    "- For resonant and Ari TTV systems use REBOUND commit b165135deb8c5f2920abaed1637657ef8ce4f087\n",
     "- For random and Naireen systems use REBOUND commit db3ae2cea8f3462463d3e0c5788a34625bb49a9c\n",
     "\n",
-    "The resonant and Ari TTV systems use different REBOUND commits (a675e6f92cba32bae86f94739faec3b1b3098e81 for resonant). The problem is that this version doesn't have a __del__ function for the simulation archives and you get an error of too many open files when you run this. Instead we use the current latest commit (25f856dc2f79e0ad17b2f6bd604225f550593376) which does. I test below that I can reproduce the integrations bit by bit, so this should work.\n",
+    "The resonant and Ari TTV systems use different REBOUND commits (a675e6f92cba32bae86f94739faec3b1b3098e81 for resonant). The problem is that this version doesn't have a __del__ function for the simulation archives and you get an error of too many open files when you run this. Instead we use the current latest commit (25f856dc2f79e0ad17b2f6bd604225f550593376) which does. I test below that I can reproduce the integrations bit by bit, so this should work. Going beyond this, there was a bug with keep_unsynchronized=1 and using MEGNO, so we now use the patch b165135deb8c5f2920abaed1637657ef8ce4f087. I test below that an integration that initializes MEGNO gives the same result as the original sim archives that don't.\n",
     "\n",
-    "The same commit above works for the random and Naireen distribution systems. Depending on which you load above, that pair will give the same results below, the other two will not (or won't work). But the same testsim function can work on all which lets us always use the same function in generatedata/training_data_functions.py\n",
+    "The same commit above works for the random and Naireen distribution systems. Depending on which you load above, that pair will give the same results below, the other two will not (or won't work). But the same testsim function can work on all which lets us always use the same function in generatedata/training_data_functions.py. I also checked that with the old version for random and naireen systems, before keep_unsynchronized was implemented, we get reproducible results even with megno_init() so there's no problem.\n",
     "\n",
     "When we ran the resonant integrations (with the new simarchive), we did with safe_mode = 0 so we don't repeat kepler half steps. But this also sets sim.ri_whfast.keep_unsynchronized = 0, which you need for reproducibility. A value of 1 means that even if you synchronize, you'll keep integrating from the unsynchronized state if you keep going. So when integrating through a list of times, we need to set this if we want to match the sim archives. Also, the simarchives with safe_mode = 0 will be in an unsynchronized state (see simarchiverestart ipython_example), so we have to synchronize before comparing output. Even though I don't think it does anything for the old integrations, we can always set keep_unsynchronized = 1 and use the same function for all integrations"
    ]
@@ -22,7 +22,7 @@
     {
      "data": {
       "text/plain": [
-       "'3.8.1'"
+       "'3.4.0'"
       ]
      },
      "execution_count": 1,
@@ -50,12 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def testsim(sim, times):\n",
     "    sim.ri_whfast.keep_unsynchronized = 1 # Without this we won't match sim archive, see above\n",
+    "    sim.init_megno()\n",
     "    val = np.zeros((Nout, 19))\n",
     "    for i, time in enumerate(times):\n",
     "        sim.integrate(time, exact_finish_time=0)\n",
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +100,8 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.4.0\n",
-      "REBOUND built on:    \tMar  7 2019 14:43:28\n",
-      "Number of particles: \t4\n",
+      "REBOUND built on:    \tApr  2 2019 10:18:57\n",
+      "Number of particles: \t8\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000277011167e+06\n",
       "Current timestep:    \t0.034640\n",
@@ -109,6 +110,10 @@
       "<rebound.Particle object, m=3.4140160192072926e-05 x=0.9225193262954728 y=0.4107034942938748 z=-0.007950327673330494 vx=-2.4266312875245175 vy=5.726893721352419 vz=0.04678499897728613>\n",
       "<rebound.Particle object, m=1.8787249753397036e-05 x=0.16981871403865156 y=-1.2279135896541034 z=0.011612920399274694 vx=5.527494030376944 vy=0.9037972044771627 vz=-0.06443832825556559>\n",
       "<rebound.Particle object, m=1.8268998599127623e-06 x=0.87932635067516 y=-1.5303994574427984 z=-0.02390372135108166 vx=3.5793674392077772 vy=2.705759021771257 vz=0.24989183412357596>\n",
+      "<rebound.Particle object, m=0.0 x=nan y=nan z=nan vx=nan vy=nan vz=nan>\n",
+      "<rebound.Particle object, m=0.0 x=nan y=nan z=nan vx=nan vy=nan vz=nan>\n",
+      "<rebound.Particle object, m=0.0 x=nan y=nan z=nan vx=nan vy=nan vz=nan>\n",
+      "<rebound.Particle object, m=0.0 x=nan y=nan z=nan vx=nan vy=nan vz=nan>\n",
       "---------------------------------\n"
      ]
     }
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +139,8 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.4.0\n",
-      "REBOUND built on:    \tMar  7 2019 14:43:28\n",
-      "Number of particles: \t4\n",
+      "REBOUND built on:    \tApr  2 2019 10:18:57\n",
+      "Number of particles: \t8\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000277011167e+06\n",
       "Current timestep:    \t0.034640\n",
@@ -144,6 +149,10 @@
       "<rebound.Particle object, m=3.4140160192072926e-05 x=0.9225193262954728 y=0.4107034942938748 z=-0.007950327673330494 vx=-2.4266312875245175 vy=5.726893721352419 vz=0.04678499897728613>\n",
       "<rebound.Particle object, m=1.8787249753397036e-05 x=0.16981871403865156 y=-1.2279135896541034 z=0.011612920399274694 vx=5.527494030376944 vy=0.9037972044771627 vz=-0.06443832825556559>\n",
       "<rebound.Particle object, m=1.8268998599127623e-06 x=0.87932635067516 y=-1.5303994574427984 z=-0.02390372135108166 vx=3.5793674392077772 vy=2.705759021771257 vz=0.24989183412357596>\n",
+      "<rebound.Particle object, m=2000000.0211196817 x=127.86692763949111 y=1.000000004325131 z=-1.8521116197954078e-05 vx=2.525239056072309e-06 vy=2.325757874177189e-07 vz=5.378951549300944e-05>\n",
+      "<rebound.Particle object, m=3.387946284356744e-21 x=127.87871689571585 y=0.9999207611004525 z=0.6506484090796262 vx=0.6796231308602376 vy=-0.005823439462666051 vz=-4.838007697315441>\n",
+      "<rebound.Particle object, m=4.4984796008862995 x=127.822662758464 y=1.0000276823410423 z=-0.2015712566179134 vx=-1.2108597494163325 vy=0.003980673829135862 vz=5.445653695855314>\n",
+      "<rebound.Particle object, m=-1.2252595769303873 x=127.75176105509976 y=0.9988286290084084 z=0.05191572712364854 vx=-1.63060775461692 vy=-0.059416800608562595 vz=4.965781895517487>\n",
       "---------------------------------\n"
      ]
     }
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -265,9 +274,9 @@
      "output_type": "stream",
      "text": [
       "---------------------------------\n",
-      "REBOUND version:     \t3.8.1\n",
-      "REBOUND built on:    \tMar  6 2019 14:13:11\n",
-      "Number of particles: \t4\n",
+      "REBOUND version:     \t3.8.2\n",
+      "REBOUND built on:    \tApr  2 2019 09:39:14\n",
+      "Number of particles: \t8\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000173176938e+06\n",
       "Current timestep:    \t0.034641\n",
@@ -276,6 +285,10 @@
       "<rebound.Particle object, m=3.984920040268468e-06 x=-0.8738958364059268 y=0.4817517647367535 z=-0.003159573737010137 vx=-2.9307195320280233 vy=-5.572709926922893 vz=0.0012280114770667806>\n",
       "<rebound.Particle object, m=1.2444171101394952e-05 x=0.6063431581766432 y=1.4011530424916374 z=-0.007375445763490789 vx=-4.553768175624738 vy=2.174789434522493 vz=-0.026555396336484776>\n",
       "<rebound.Particle object, m=2.531702420746453e-07 x=-1.5977605108526833 y=0.5538766686714539 z=0.03817301570906049 vx=-1.5043238809838 vy=-4.4327274873988936 vz=-0.09496801973501136>\n",
+      "<rebound.Particle object, m=1.0000126973413435 x=1716752531.5846274 y=-3827763950.543829 z=43887308.3937378 vx=19084959297.328125 vy=2112420661.7053795 vz=-13774081.125489384>\n",
+      "<rebound.Particle object, m=0.0 x=307487446898871.25 y=585146672048196.4 z=-152093220255.48715 vx=-3641939781566001.0 vy=2009495335823340.2 vz=-13310054327109.34>\n",
+      "<rebound.Particle object, m=0.0 x=-238876616548333.22 y=116040812134204.12 z=-2346819149375.921 vx=-347443751486800.7 vy=-817389810603229.5 vz=7501235616964.7295>\n",
+      "<rebound.Particle object, m=0.0 x=119514990836439.31 y=204320578252044.88 z=-52209841112767.42 vx=-981137952610431.2 vy=204005733878448.66 vz=-104803510677489.14>\n",
       "---------------------------------\n"
      ]
     }
@@ -292,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,8 +313,8 @@
      "output_type": "stream",
      "text": [
       "---------------------------------\n",
-      "REBOUND version:     \t3.8.1\n",
-      "REBOUND built on:    \tMar  6 2019 14:13:11\n",
+      "REBOUND version:     \t3.8.2\n",
+      "REBOUND built on:    \tApr  2 2019 09:39:14\n",
       "Number of particles: \t4\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000173176938e+06\n",
@@ -323,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +345,7 @@
        "0.03464101615137757"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
